crates/plotnik-tests/tests/02-parser/recovery_unexpected/empty_alternation_after_garbage.txt
Q = [^^^ @name]
------------------ DIAGNOSTICS -------------------
error: expected an alternative, or `]` to close
 --> query.ptk:1:6
  |
1 | Q = [^^^ @name]
  |      ^^^^^^^^^
